--- a/css/style.css
+++ b/css/style.css
@@ -510,12 +510,12 @@ footer ul li a:hover{
 
 .top-info{
     padding: 1.5%;
-    background-color: #500350;
-    color: yellow;
+    background-color: #039140;
+    color: white;
     text-align: center;
 }
 .top-info a{
-    color: yellow;
+    color: white;
     text-decoration: none; 
     font-size: 14px;
 }
@@ -733,7 +733,7 @@ ul {
 
 footer{
     width: 100%;
-    background-color: #500350;
+    background-color: #3db166;
     padding: 5%;
 }
 .footer-logo{
@@ -756,7 +756,7 @@ footer{
 .moto{
     font-size: 16px;
     font-weight: 300;
-    color: rgb(184, 179, 184);
+    color: #3db166;
 }
 .footer-title{
     border-bottom: 2px solid #3db166;
